--- a/content/support/contracts/index.slim
+++ b/content/support/contracts/index.slim
@@ -53,7 +53,7 @@ p You may request an invoice by e-mailing **support@imageresizing.net** with you
 
 h3 Medium-size print
 ul
-  li [1] You will recieve updates to the latest plugin licenses for the duration of your contract. This means that you will recieve all releases upto the last day of your purchased contract option.
+  li [1] You will receive updates to the latest plugin licenses for the duration of your contract. This means that you will receive all releases up to the last day of your purchased contract option.
   li Payment must clear before your Contract Services become available.
   li We reserve the right to cancel and pro-rata refund any support contract (we've never had to do this).
   li
@@ -61,7 +61,7 @@ ul
     | Limited to 1 Support Incident per month.
   li
     a name="note2"
-    | $100 less than the Elite Edition as compared to the Bronze 6 Month Subscription. $1895 value calculate as 6 Support Incidents a $135 each, 30-minute Q & A Session valued at $190 and 1 hour of Development Assistance valued at $195.
+    | $100 less than the Elite Edition as compared to the Bronze 6 Month Subscription. $1895 value calculated as six Support Incidents a $135 each, one 30-minute session valued at $190 and 1 hour of Development Assistance valued at $195.
   li
     a name="note3"
     | During business hours. For example, for same day response you must contact support at least 2 hours before the end of business hours for that same day.
