revised ux on hero button

--- a/content/support/index.slim
+++ b/content/support/index.slim
@@ -16,10 +16,10 @@ h1 Support
 				1. Visit the [self-diagnostics page](/plugins/diagnostics) on your server: `/resizer.debug.ashx`
 				2. Enable [detailed error messages, and visit the image URL directly](/docs/geterror)
 				3. Skim the comprehensive [troubleshooting guide](/docs/troubleshoot) and [faq](/docs/faq). If it's a *how-to* question, [try reading the documentation](/docs), [searching this site](/search), and [searching Stack Overflow](http://stackoverflow.com/questions/tagged/imageresizer).
-				
+
 			hr
 			markdown:
-				When contacting support about a problem, *please* include (a) the [diagnostics page output](/plugins/diagnostics), and (b) [the precise error message you get when you put the image URL directly into the address bar](/docs/geterror). **Without this information, we cannot diagnose the problem**. 
+				When contacting support about a problem, *please* include (a) the [diagnostics page output](/plugins/diagnostics), and (b) [the precise error message you get when you put the image URL directly into the address bar](/docs/geterror). **Without this information, we cannot diagnose the problem**.
 
 		markdown:
 			### Helpful Links
@@ -36,9 +36,9 @@ h1 Support
 	.span6
 		h2 Priority Support
 		.hero-unit
-			h3 
+			h3
 				| Save money and time with our new Support Contract Options
-				a.btn.btn-success href="/support/contracts" Learn more &raquo;
+			p: a.btn.btn-success href="/support/contracts" Learn more &raquo;
 
 		markdown:
 			Priority email, phone and TeamViewer support costs $135/incident. A [30-minute Q&A session costs $70](/support/consult), but (unlike) a support incident, is time-limited and only reccommended for consulting/introduction purposes.
@@ -62,10 +62,10 @@ h1 Support
 			a href="https://www.e-junkie.com/ecom/gb.php?c=cart&amp;cl=41912&amp;ejc=2" target="ej_ejc" class="ec_ejc_thkbx" onClick="javascript:return EJEJC_lc(this);"
 				img src="http://www.e-junkie.com/ej/ej_view_cart.gif" alt="View Cart"
 
-		javascript: 
+		javascript:
 			function EJEJC_lc(th) { return false; }
 		script src='http://www.e-junkie.com/ecom/box.js'
-		
+
 		h2 You may already qualify for Priority Support if you..
 
 		markdown:
@@ -74,18 +74,18 @@ h1 Support
 			* Purchased your license before Feb. 1st, 2013, and have never used the one (1) included incident.
 			* Are an open-source developer leveraging the ImageResizing.NET project in another open-source project
 			* Have blogged about the project and referred at least 300 visitors
-		
+
 hr
 .row
 	.span6
 
 		h2 id="bugbounty" Bug bounty program
-		markdown: 
+		markdown:
 			We offer free support for all *bug-related* inquiries through e-mail (**support@imageresizing.net**) and [Stack Overflow](http://stackoverflow.com/questions/tagged/imageresizer).
 
 			We will also PayPal you between $5 and $50 for each bug you report if you're the first to report it, and if it's in the latest version of one of our ImageResizer.* assemblies.
 
-			The average bug reward is $15; only security holes and memory leaks are eligible for the $50 level. 
+			The average bug reward is $15; only security holes and memory leaks are eligible for the $50 level.
 
 			We welcome feature requests, and everyone may [sumbit new ideas or vote for existing ones at the uservoice site](http://resizer.uservoice.com/forums/108373-image-resizer-v3).
 	.span6
@@ -98,7 +98,7 @@ hr
 			3. The question is about the URL API and [follows best praticies](/docs/best-practices).
 			4. The question is detailed enough to answer and shows some diagnostic effort.
 
-			We typically answer Stack Overflow questions within 1-2 weeks. E-mail your question URL to **support@imageresizing.net** for a faster response. 
+			We typically answer Stack Overflow questions within 1-2 weeks. E-mail your question URL to **support@imageresizing.net** for a faster response.
 
 			If we take the time to provide a good answer to your question, please be courteous; mark it as the answer and vote it up. We prioritize questions from Stack Overflow users with a good reputation.
 
