fixed commas and spacing in testimonials

--- a/content/index.slim
+++ b/content/index.slim
@@ -372,20 +372,21 @@ p
         cite
           a href="http://hanselman.com"
             | Scott Hanselman
+          | , 
           span
-            | , Web Platform Team, Microsoft
+            | Web Platform Team, Microsoft
     li
       blockquote
         | We have 8 years working knowledge of dynamic image resizing software, and the majority of that time was spent working with industry-leading products such as Adobe Scene7 and eRez. ImageResizer is what we’ve found to best serve our customers’ needs – installation was a breeze, support is impeccable, and the price tag much more reasonable. I highly recommend ImageResizer for any dynamic imaging needs.
         cite
-          | Craig Boal,
+          | Craig Boal, 
           span Web Development Manager
     li
       blockquote
         p We've used Nathanael's Image Resizer on a variety of projects, both small and large. It's fast, reliable, robust, easy to use, and a HUGE time saver. I can easily say that we've gotten more bang-for-the-buck from it than anything else we've purchased in the past 5 years.
         p Thanks Nathanael for creating such a wonderful product.
         cite
-          | Dorian Collier,
+          | Dorian Collier, 
           span Deesea
 p: a href="/docs/benefits/testimonials" Read more testimonials
 
