Renamed support/comparison -> support/compare

--- a/content/support/contracts/support_page.slim
+++ b/content/support/contracts/support_page.slim
@@ -8,13 +8,14 @@ ul.nav.nav-pills
     li
       a href="/support/contracts" Overview
     li
+      a href="/support/contracts/compare" Compare
+    li
       a href="/support/contracts/bronze" Bronze
     li
       a href="/support/contracts/silver" Silver
     li
       a href="/support/contracts/gold" Gold
-    li
-      a href="/support/contracts/comparison" Product Comparison
+
 
 
 == yield
