--- a/content/support/contracts/silver.slim
+++ b/content/support/contracts/silver.slim
@@ -30,7 +30,7 @@ h1 Support Contracts
     .row-fluid
       - purchase_options.flatten.each do | p |
         .span4
-          == partial :purchase_button, p
+          == partial(:purchase_button, {locals: p})
     .row-fluid
       - short_features.each_slice((short_features.length/2.0).ceil) do | c |
         .span6: h3: ul.icons-ul
@@ -43,12 +43,7 @@ h1 Support Contracts
     p
       | In addition to our imaging software expertise we also have extensive experience combining this with networking, authentication, load balancing, caching and web servers across Windows and UNIX based systems.
 
-    / p &nbsp;
-    / p The Gold Plan is our premier Support Contract designed for exclusively for the enterprise. We understand mission critical applications required fast turn around and response times.
-    / p The Gold Plan provides priority support and guaranteed hot-fix turnaround in 2 business days. It also provides extensive Architecture Planning, Custom Development and Assisted Installations often needed for enterprise scale applications.
-    / p
-    /   | In addition to our imaging software expertise we also have extensive experience combining this with networking, authentication, load balancing, caching and web servers across Windows and UNIX based systems.
-
+ 
 
 
     .well
