Clean up support intro page

--- a/content/support/contracts/index.slim
+++ b/content/support/contracts/index.slim
@@ -1,6 +1,6 @@
 Flags: -comments
 Libs: -comments
-Icon: picture
+Icon: phone
 Layout: support_page
 
 
@@ -10,7 +10,7 @@ h1 Support Contracts
   .span12
     .hero-unit
       h2 Save Money with a Support Contract
-      h4 Get a direct line to our developers, latest features and plugins
+      h4 Get a direct line to our developers, latest features, and scalability guidance.
 
 .row-fluid
   .span4
@@ -20,11 +20,15 @@ h1 Support Contracts
       p align="right"
         a.btn.btn-primary href="contracts/bronze"
           | Details &raquo;
-      p
-      | Get on track fast and avoid costly errors. Bronze Support includes a 30-minute architecture consulting call to help you make the most of ImageResizer. It also gives your designated point of contact 1 free priority support incident per month.
-      p
-      | For only $100 more than an Elite license (which is included!), a 6 month Bronze plan is always a better choice than an Elite license alone.
-      p &nbsp;
+      markdown: 
+        In thirty minutes, we will help you design the ideal architecture to ensure you meet your performance, quality, scalability, and cost goals. 
+
+        Maintenance is included; free software upgrades for the duration of the contract. **Includes a permanent Elite license which does NOT expire with your contract.**
+
+        1 designated individual gets 1 free priority support incident per month. 
+
+        Elite: $849. Elite+6 Month Bronze: $949. Do the math. 
+
   .span4
     .well
       p: a href="contracts/silver"
@@ -49,31 +53,5 @@ h1 Support Contracts
       p &nbsp;
 
 h2 Purchase Orders and Invoices
-p You may request an invoice by e-mailing **support@imageresizing.net** with your company name and billing address.
+p You may request an invoice by e-mailing sales@imageresizing.net with your company name and billing address.
 
-h3 Medium-size print
-ul
-  li [1] You will receive updates to the latest plugin licenses for the duration of your contract. This means that you will receive all releases up to the last day of your purchased contract option.
-  li Payment must clear before your Contract Services become available.
-  li We reserve the right to cancel and pro-rata refund any support contract (we've never had to do this).
-  li
-    a name="note1"
-    | Limited to 1 Support Incident per month.
-  li
-    a name="note2"
-    | $100 less than the Elite Edition as compared to the Bronze 6 Month Subscription. $1895 value calculated as six Support Incidents a $135 each, one 30-minute session valued at $190 and 1 hour of Development Assistance valued at $195.
-  li
-    a name="note3"
-    | During business hours. For example, for same day response you must contact support at least 2 hours before the end of business hours for that same day.
-  li
-    a name="note4"
-    | Per year renewing on the anniversary of your subscription.
-  li
-    a name="note5"
-    | Major Upgrades are included during the subscription period.
-  li
-    a name="note6"
-    | 24-hour response time available Monday - Friday.
-  li
-    a name="note7"
-    | Emergency Support Incidents are those that fall outside of normal business hours.
