--- a/content/support/contracts/bronze.slim
+++ b/content/support/contracts/bronze.slim
@@ -53,3 +53,4 @@ h1 Support Contracts
           p
             | #{f[:description]}
 
+    == partial(:details, {locals: {contract: SupportContracts.new.bronze}})
